fix: augmit-contact-info-widget align center

--- a/css/style.css
+++ b/css/style.css
@@ -8702,6 +8702,9 @@ button.testimonial-arrow-btn:hover:before {
 .widget:last-child {
   margin-bottom: 40px;
 }
+.widget.widget_augmit_contact_info_widget {
+  text-align: center;
+}
 .widget.widget_augmit_contact_info_widget .wp-block-heading {
   margin-top: -8px;
 }
